# finance-app

./: .alembic-check-3d-report.txt  .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .integration-3d-report.txt  .mypy-3c-report.txt  .mypy-3d-report.txt  .mypy-report.txt  .parity-3c-report.txt  .ruff-report.txt  AGENTS.md  Dockerfile.dev  README.md  docker-compose.yml  next.config.js  npm-ci-report.txt  package-lock.json  package.json  prisma.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
backend/python/: 3e-b-integration-report.txt  3f-format-report.txt  3f-lifecycle-report.txt  Dockerfile  README.md  alembic.ini  bootstrap.ps1  pyproject.toml  ruff-report.txt
backend/python/app/: __init__.py  lifespan.py  main.py
backend/python/database/: README.md  prisma_migration_archive.toml  schema_ownership.toml  schema_revisions.toml
backend/python/finance_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/python/migrations/: README.md  env.py
backend/python/scripts/: __init__.py  alembic_baseline.py  check.py  database_migrate.py  database_schema.py  fix_implement_3f_temp.py  implement_3f_temp.py  migration_policy.py  run_3f_temp.sh  sqlalchemy_schema.py
backend/python/tests/: conftest.py  test_account_access.py  test_account_invitations.py  test_account_invitations_integration.py  test_account_lifecycle.py  test_account_lifecycle_integration.py  test_account_membership_admin.py  test_account_membership_admin_integration.py  test_accounts_api.py  test_accounts_integration.py  test_accounts_repository.py  (+41 more)
(+314 files in other folders)
